# AdventOfCode

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml
src/year_2021/day_1/: first_challenge.py  input_values.py  second_challenge.py
src/year_2021/day_10/: first_challenge.py  input_values.py  second_challenge.py
src/year_2021/day_11/: first_challenge.py  input_values.py  second_challenge.py
src/year_2021/day_12/: first_challenge.py  input_values.py  second_challenge.py
src/year_2021/day_13/: first_challenge.py  input_values.py  second_challenge.py
src/year_2021/day_14/: first_challenge.py  input_values.py  second_challenge.py
src/year_2021/day_15/: first_challenge.py  input_values.py  second_challenge.py
src/year_2021/day_2/: first_challenge.py  input_values.py  second_challenge.py
src/year_2021/day_3/: first_challenge.py  input_values.py  second_challenge.py
src/year_2021/day_4/: first_challenge.py  input_values.py  second_challenge.py
src/year_2021/day_5/: first_challenge.py  second_challenge.py
src/year_2021/day_6/: first_challenge.py  input_values.py  second_challenge.py
src/year_2021/day_7/: first_challenge.py  input_values.py  second_challenge.py
src/year_2021/day_8/: first_challenge.py  input_values.py  second_challenge.py
src/year_2021/day_9/: first_challenge.py  input_values.py  second_challenge.py
src/year_2021/new_day_template/: first_challenge.py  input_values.py  second_challenge.py
src/year_2022/day_1/: first_challenge.py  input_values.py  second_challenge.py
(+6 files in other folders)
